--- a/TSP-MinDistance-GA/style.css
+++ b/TSP-MinDistance-GA/style.css
@@ -14,19 +14,19 @@ body {
 
 /* Style the links inside the navigation bar */
 .topnav a {
-  float: left;
+  float: center;
   display: block;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 25px;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: #008B8B;
+  /*color: black;*/
 }
 
 /* Add an active class to highlight the current page */
